--- a/style.css
+++ b/style.css
@@ -438,3 +438,34 @@ header {
 .no-stock-card {
   background-color: #f8d7da; /* rojo */
 }
+.loader-pantalla {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+.spinner {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #003366;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+footer {
+  text-align: left;
+}
+@media (max-width: 600px) {
+  footer {
+    text-align: center;
+  }
+}
